Added taglibs-standard-impl lib (required for linking static resources into JSP files) to WEB-INF/lib.
NOTE:
There are at least 2 other ways for solving the issue:
1. Use dependency in pom.xml (should be included into the WAR artifact too):
	<dependency>
		<groupId>org.apache.taglibs</groupId>
		<artifactId>taglibs-standard-impl</artifactId>
		<version>1.2.5</version>
	</dependency>
2. Copy taglibs-standard-impl jar directly into apache\lib folder

When option (1) is used there's no need to specify explicitly in pom.xml the javax.servlet/jstl dependency

NOTE: All solutions require that NO @WebServlet("/") is used for any servlet. Use @WebServlet("") instead for home/index if required.

More details on above options: https://softuni.bg/forum/21324/linkvane-na-statichen-resurs-v-jsp-fayl

--- a/FDMC - Java EE/pom.xml
+++ b/FDMC - Java EE/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>exercise</groupId>
-    <artifactId>exercise</artifactId>
+    <artifactId>FDMC</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <url>http://maven.apache.org</url>
@@ -38,12 +38,11 @@
             <version>4.0.1</version>
         </dependency>
 
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/javax/javaee-api &ndash;&gt;
-                <dependency>
-                    <groupId>javax</groupId>
-                    <artifactId>javaee-api</artifactId>
-                    <version>8.0</version>
-                </dependency>-->
-
+        <!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 </project>
